# zephyrus-green

./: .gitignore  README.md  prj.conf  rtc.c  rtc.h  thingy52_nrf52832.overlay
base-node/: CMakeLists.txt  prj.conf
base-node/boards/: disco_l475_iot1.overlay
base-node/src/: ferry.c  ferry.h  main.c  rtc.c  rtc.h  socket.c  socket.h  wifi.c  wifi.h
dashboard/: ais_display.py  server.py  test2.html
embedded/apps/ultrasonic/: prj.conf
embedded/mylib/: mqtt.c
ml_ultrasonic/: CMakeLists.txt  prj.conf
ml_ultrasonic/include/: main_functions.h  ul_model_data.h  ultrasonic_handler.h
ml_ultrasonic/src/: main.c  main_functions.cpp  ul_model_data.cpp  ultrasonic_handler.c
mqtt_mosquito/: CMakeLists.txt  prj.conf
mqtt_mosquito/src/: main.c
speaker-node/inc/: mqtt.h
speaker-node/src/: main.c  mqtt.c
tflm_training/: new_data.csv  noisify_data.py  tensor_generator.py  ultrasonic_collection.py
